# img2irc (C) 2022 Sadie Powell <sadie@witchery.services>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "img2irc"
version = "0.3.0"
edition = "2021"

categories = ["command-line-utilities", "multimedia::images"]
description = "A tool that allows converting images to IRC formatting codes."
documentation = "https://docs.rs/img2irc/"
homepage = "https://github.com/SadieCat/img2irc/"
keywords = ["internet-relay-chat", "irc"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/SadieCat/img2irc/"

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
image = "0.25.1"
lazy_static = "1.4.0"
oklab = "1.0.0"
