# img2irc (C) 2022 Sadie Powell <sadie@witchery.services>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "img2irc"
version = "0.4.1"
edition = "2024"

categories = ["command-line-utilities", "multimedia::images"]
description = "A tool that allows converting images to IRC formatting codes."
documentation = "https://docs.rs/img2irc/"
homepage = "https://github.com/SadieCat/img2irc/"
keywords = ["internet-relay-chat", "irc"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/SadieCat/img2irc/"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
image = "0.25.5"
lazy_static = "1.5.0"
oklab = "1.1.2"
